fixing alignment error

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,7 +51,9 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin-top: 50px;
+	//margin-top: 50px;
+	border: 1px solid green;
+	margin: 50px 20px 20px 20px;
 	border-radius: 2px;
 }
 
@@ -66,8 +68,12 @@ body {
 	border-radius: 10px;
 }
 
+#sub-title {
+	font-weight: 600;
+	text-align: center;
+}
+
 .row-features-catalog {
-	//flex: 1;
 	display: flex;
 	flex-direction: column;
 	margin-top: 5px;
@@ -77,6 +83,12 @@ body {
 	border-radius: 2px;
 }
 
+#book-collection {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 #catalog {
 	display: flex;
 	flex-wrap: wrap;
@@ -84,12 +96,12 @@ body {
 }
 
 .catalog-item {
-	display: flex;
+	display: flex auto;
 	flex-direction: column;
 	align-items: center;
 	max-width: 100%;
 	border: .5px solid blue;
-	margin: -5px 5px 10px 15px;
+	margin: -5px 5px 10px 5px;
 	padding: 20px;
 }
 
@@ -104,15 +116,11 @@ body {
 }
 
 .form-feature {
-	//flex: 1;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	//align-items: left;
 	margin-top: 20px;
-	/*margin-left: 25%;
-	margin-right: 25%;*/
 	padding: 2px;
 	border-radius: 2px;
 }
@@ -326,15 +334,9 @@ input {
 	margin-left: 15%;
 }
 
-.log-out {
-	//margin-right: 40%;
-}
-
 .profile-settings {
 	display: flex;
 	flex-direction: column;
-	//margin-left: 15%;
-	//padding-right: 10px;
 	margin-bottom: 10px;
 	margin-right: 5%;
 }
@@ -361,12 +363,12 @@ a, a:active, a:focus, a:hover, a:visited {
 
 @media all and (max-width: 650px) {
 
-   #footer, #dash-footer {
-   	 display: flex;
-   	 flex-direction: column;
+  #footer, #dash-footer {
+	 display: flex;
+	 flex-direction: column;
 	 position: relative; /* Changed position to relative to keep footer on bottom */
 	 width: 100%;
-	}
+  }
 
   .row-features {
   	flex-wrap: wrap;
